--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
-
+<div class="post-container">
+<span class="post-date">{{ page.date | date_to_string }}</span>
+<h3>{{ page.title }}</h3>
 <div class="post">
 {{ content }}
+</div>
 </div>
