--- a/css/custom.css
+++ b/css/custom.css
@@ -33,6 +33,8 @@ ul{
 
 .post ul{
 	list-style: disc;
+	font-size: 1.6rem;
+	margin: 1.5rem 0 1.5rem 3rem;
 }
 
 .post a{
@@ -71,6 +73,11 @@ nav.blog-navigation ul{
 nav.blog-navigation select{
 	width: 100%;
 	text-align: left;
+	margin: 0;
+}
+
+.notes{
+	font-weight: bold;
 	margin: 0;
 }
 
