--- a/css/custom.css
+++ b/css/custom.css
@@ -81,6 +81,14 @@ nav.blog-navigation select{
 	margin: 0;
 }
 
+blockquote {
+  font-size: 1em;
+  line-height: 1.5em;
+  padding: 0px 10px 0 10px;
+  margin: 5px 0 0 20px;
+  border-left: 5px solid #999;
+}
+
 /* Larger than tablet */
 @media (min-width: 750px) {
 	nav.blog-navigation{
