modificacion para agregar https

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
         <link rel="stylesheet" href="/css/custom.css">
         <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-        <link href='http://www.jdzarate.com/feed.xml' rel='alternate' type='application/rss+xml'>
-        <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+        <link href='https://www.jdzarate.com/feed.xml' rel='alternate' type='application/rss+xml'>
+        <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     </head>
     <body>
 <!--     <div class="offset-by-two eleven columns">
@@ -46,7 +46,7 @@
               <li><a href="/archive">Archivo</a></li>
               <li><a href="/about">Acerca de</a></li>
               <li><a href="/projects">Proyectos</a></li>
-              <li><a href="http://www.jdzarate.com/feed.xml">RSS</a></li>
+              <li><a href="https://www.jdzarate.com/feed.xml">RSS</a></li>
               <li><a class="pushbullet-subscribe-widget" data-channel="jdzarate" data-widget="button" data-size="small"></a>
 <script type="text/javascript">(function(){var a=document.createElement('script');a.type='text/javascript';a.async=true;a.src='https://widget.pushbullet.com/embed.js';var b=document.getElementsByTagName('script')[0];b.parentNode.insertBefore(a,b);})();</script></li>
             </ul>
@@ -67,15 +67,15 @@
           <div class="footer">
               <div class="contact">
                 <div>
-                <a href="http://twitter.com/jdzaratem/" target="_blank" ><i class="icon-twitter-sign icon-2x"></i></a>
-                  <a href="http://github.com/jdzarate/" target="_blank" style="margin-left:0.3em;"><i class="icon-github-sign icon-2x"></i></a>
-                  <a href="http://jdzarate.tumblr.com/" target="_blank" style="margin-left:0.3em;"><i class="icon-tumblr-sign icon-2x"></i></a>
+                <a href="https://twitter.com/jdzaratem/" target="_blank" ><i class="icon-twitter-sign icon-2x"></i></a>
+                  <a href="https://github.com/jdzarate/" target="_blank" style="margin-left:0.3em;"><i class="icon-github-sign icon-2x"></i></a>
+                  <a href="https://jdzarate.tumblr.com/" target="_blank" style="margin-left:0.3em;"><i class="icon-tumblr-sign icon-2x"></i></a>
                   <a href="https://www.google.com/+JoseDanielZarateM" target="_blank" style="margin-left:0.3em;"><i class="icon-google-plus-sign icon-2x"></i></a>
                 </div>
               </div>
               <div class="subscribe">
               <p>
-                  Puedes suscribirte vía <a href="http://www.jdzarate.com/feed.xml">rss</a> o también puedes recibir notificaciones sobre nuevos posts en tu desktop, tablet o smartphone vía Pushbullet <br><a class="pushbullet-subscribe-widget" data-channel="jdzarate" data-widget="button" data-size="small"></a>
+                  Puedes suscribirte vía <a href="https://www.jdzarate.com/feed.xml">rss</a> o también puedes recibir notificaciones sobre nuevos posts en tu desktop, tablet o smartphone vía Pushbullet <br><a class="pushbullet-subscribe-widget" data-channel="jdzarate" data-widget="button" data-size="small"></a>
 <script type="text/javascript">(function(){var a=document.createElement('script');a.type='text/javascript';a.async=true;a.src='https://widget.pushbullet.com/embed.js';var b=document.getElementsByTagName('script')[0];b.parentNode.insertBefore(a,b);})();</script>
                 </p>
               </div>
