--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
             <div class="header" style="background:#263238;">
               <div class="row">
                   <h1 class="blog-title" style=""><a href="/">jdzarate.com</a></h1>
-                  <h2 class="blog-subtitle">Jos&eacute; Daniel Z&aacute;rate: ocasional programador y escritor.</h2>
+                  <h2 class="blog-subtitle"></h2>
               </div>
             </div>
         </div>
